tests/snapshots/codegen_snapshot_tests__operators.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn sample_word() -> String {
    return "alpha".to_string();
}
fn test_operators() {
    let _add: i64 = 1 + 2;
    let _sub: i64 = 5 - 3;
    let _mul: i64 = 4 * 6;
    let _float_div: f64 = incan_stdlib::num::py_div((10) as f64, (3) as f64);
    let _mod_result: i64 = incan_stdlib::num::py_mod_i64(10, 3);
    let _eq: bool = 5 == 5;
    let _ne: bool = 3 != 4;
    let _lt: bool = 2 < 5;
    let _le: bool = 2 <= 2;
    let _gt: bool = 10 > 5;
    let _ge: bool = 10 >= 9;
    let _and_result: bool = true && false;
    let _or_result: bool = true || false;
    let _not_result: bool = !true;
    let _lowercase_bool: bool = true && false;
    let _using_is: bool = true == false;
    let _neg_int: i64 = -42;
    let _neg_float: f64 = -3.14;
    let _complex: i64 = (1 + 2) * (3 - 4);
    let words: Vec<String> = vec!["alpha".to_string(), "beta".to_string()];
    let _has_alpha: bool = {
        let __incan_probe = "alpha";
        let __incan_probe = <_ as AsRef<str>>::as_ref(&__incan_probe);
        words
            .iter()
            .any(|__incan_item| <_ as AsRef<str>>::as_ref(__incan_item) == __incan_probe)
    };
    let vowels = ["a".to_string(), "e".to_string(), "i".to_string()]
        .into_iter()
        .collect::<std::collections::HashSet<_>>();
    let _has_a: bool = {
        let __incan_probe = "a";
        let __incan_probe = <_ as AsRef<str>>::as_ref(&__incan_probe);
        vowels.contains(__incan_probe)
    };
    let _lacks_z: bool = !{
        let __incan_probe = "z";
        let __incan_probe = <_ as AsRef<str>>::as_ref(&__incan_probe);
        vowels.contains(__incan_probe)
    };
    let _has_alpha_from_call: bool = {
        let __incan_probe = sample_word();
        let __incan_probe = <_ as AsRef<str>>::as_ref(&__incan_probe);
        words
            .iter()
            .any(|__incan_item| <_ as AsRef<str>>::as_ref(__incan_item) == __incan_probe)
    };
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = test_operators();
}
