tests/snapshots/codegen_snapshot_tests__param_mut_unused.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

#![allow(unused_imports, dead_code, unused_variables)]

// __INCAN_INSERT_MODS__

use incan_stdlib::prelude::*;
use incan_derive::{FieldInfo, IncanClass};
fn energy(bodies: Vec<i64>) -> i64 {
    let mut total = 0;
    for b in bodies.iter().copied() {
        total = total + b;
    }
    return total;
}
