tests/snapshots/codegen_snapshot_tests__pattern_alternation.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 2629
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[derive(Debug, Clone, PartialEq)]
enum Status {
    Pending,
    Retrying,
    Done,
}
impl incan_stdlib::reflection::HasTypeClassName for Status {
    fn __class_name__() -> &'static str {
        "Status"
    }
}
fn label(status: Status) -> String {
    let _ = match status {
        Status::Pending | Status::Retrying => {
            return "waiting".to_string();
        }
        Status::Done => {
            return "done".to_string();
        }
    };
}
fn first(result: Result<i64, i64>) -> i64 {
    match result {
        Ok(value) | Err(value) => {
            return value;
        }
        _ => {}
    }
    return 0;
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = println!("{}", label(Status::Pending.clone()));
    let _ = println!("{}", first(Ok:: < i64, i64 > (1)));
}
fn main() {
    main();
}
