tests/snapshots/codegen_snapshot_tests__patterns.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 3884
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn test_pattern_wildcard() {
    let x: i64 = 42;
    let _ = match x {
        _ => {
            let _ = println!("{}", "wildcard matches anything");
        }
    };
}
fn test_pattern_literals() {
    let value: i64 = 5;
    let _ = match value {
        0 => {
            let _ = println!("{}", "zero");
        }
        1 => {
            let _ = println!("{}", "one");
        }
        5 => {
            let _ = println!("{}", "five");
        }
        _ => {
            let _ = println!("{}", "other");
        }
    };
}
fn test_pattern_string_literal() {
    let name: String = "Alice".to_string();
    let _ = match name {
        ref __incan_match_string_literal if __incan_match_string_literal.as_str()
            == "Alice" => {
            let _ = println!("{}", "Hello Alice");
        }
        ref __incan_match_string_literal if __incan_match_string_literal.as_str()
            == "Bob" => {
            let _ = println!("{}", "Hello Bob");
        }
        _ => {
            let _ = println!("{}", "Hello stranger");
        }
    };
}
fn test_pattern_bool() {
    let flag: bool = true;
    let _ = match flag {
        true => {
            let _ = println!("{}", "yes");
        }
        false => {
            let _ = println!("{}", "no");
        }
    };
}
fn test_pattern_option_some() {
    let maybe: Option<i64> = Some(42);
    let _ = match maybe {
        Some(n) => {
            let _ = println!("{}", n);
        }
        None => {
            let _ = println!("{}", "nothing");
        }
    };
}
fn test_pattern_option_none() {
    let maybe: Option<i64> = None::<i64>;
    let _ = match maybe {
        Some(n) => {
            let _ = println!("{}", n);
        }
        None => {
            let _ = println!("{}", "nothing");
        }
    };
}
fn test_pattern_result_ok() {
    let result: Result<i64, String> = Ok::<i64, String>(42);
    let _ = match result {
        Ok(value) => {
            let _ = println!("{}", value);
        }
        Err(error) => {
            let _ = println!("{}", error);
        }
    };
}
fn test_pattern_result_err() {
    let result: Result<i64, String> = Err::<i64, String>(("failed").to_string());
    let _ = match result {
        Ok(value) => {
            let _ = println!("{}", value);
        }
        Err(error) => {
            let _ = println!("{}", error);
        }
    };
}
fn test_pattern_nested_option() {
    let nested: Option<Option<i64>> = Some(Some(42));
    let _ = match nested {
        Some(Some(n)) => {
            let _ = println!("{}", n);
        }
        Some(None) => {
            let _ = println!("{}", "inner none");
        }
        None => {
            let _ = println!("{}", "outer none");
        }
    };
}
fn test_pattern_tuple() {
    let pair: (i64, String) = (42, "answer".to_string());
    let _ = match pair {
        (0, _) => {
            let _ = println!("{}", "first is zero");
        }
        (_, "answer") => {
            let _ = println!("{}", "second is answer");
        }
        _ => {
            let _ = println!("{}", "something else");
        }
    };
}
fn test_pattern_multiple_bindings() {
    let value: Option<i64> = Some(10);
    let _ = match value {
        Some(x) if x > 5 => {
            let _ = println!("{}", "large");
        }
        Some(x) => {
            let _ = println!("{}", "small");
        }
        None => {
            let _ = println!("{}", "none");
        }
    };
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = test_pattern_wildcard();
    let _ = test_pattern_literals();
    let _ = test_pattern_string_literal();
    let _ = test_pattern_bool();
    let _ = test_pattern_option_some();
    let _ = test_pattern_option_none();
    let _ = test_pattern_result_ok();
    let _ = test_pattern_result_err();
    let _ = test_pattern_nested_option();
    let _ = test_pattern_tuple();
    let _ = test_pattern_multiple_bindings();
}
fn main() {
    main();
}
