tests/snapshots/codegen_snapshot_tests__pub_import_expressions.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 719
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use widgets::Widget;
use widgets::DEFAULT_NAME;
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _w: Widget = widgets::make_widget(DEFAULT_NAME.to_string());
    let _ = widgets::make_widget(DEFAULT_NAME.to_string());
}
fn main() {
    main();
}
