tests/snapshots/codegen_snapshot_tests__pub_import_module_alias.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 726
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use widgets as w;
use widgets::DEFAULT_NAME;
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = w::make_widget(DEFAULT_NAME.to_string());
}
fn main() {
    main();
}
